# quant-portfolio-analytics-dev

./: .gitignore  LICENSE  README.md  config.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py
data/: factors_crypto.csv  market_data.duckdb  portfolio_holdings.csv  portfolio_results.csv  portfolio_results_all.csv  portfolio_stats.csv  portfolio_stats_all.csv  raw_crypto.csv  raw_equities.csv
notebooks/: backtest_analysis.ipynb
quant_portfolio_analytics_dev.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: build_factors.py  run_backtest.py  sanity_check.py
utils/: backtest.py  config_loader.py  factors.py  fetch_all_data.py  merge_to_duckdb.py  optimize.py  risk.py
